add_executable(Edit68K
        ichEditPlus/dclRichEditPlus.cpp
        ichEditPlus/RichEditPlus.cpp
        ichEditPlus/RichEditPlus.h
        boutS.cpp
        boutS.h
        sm.h
        SSEMBLE.CPP
        ssembleS.cpp
        ssembleS.h
        INFILE.CPP
        UILD.CPP
        hksaveS.cpp
        hksaveS.h
        ODEGEN.CPP
        Project.h
        IRECTIV.CPP
        DIT68K.cpp
        ditorOptions.cpp
        ditorOptions.h
        RROR.CPP
        VAL.CPP
        z68k.h
        indDialogS.cpp
        indDialogS.h
        ontForm1.cpp
        ontForm1.h
        LOBALS.CPP
        elp.cpp
        elp.h
        TMLhelp.h
        NSTLOOK.CPP
        NSTTABL.CPP
        ISTING.CPP
        istS.cpp
        istS.h
        ACRO.CPP
        ainS.cpp
        ainS.h
        OVEM.CPP
        ewhelpS.h
        BJECT.CPP
        PPARSE.CPP
        ptionsS.cpp
        ptionsS.h
        review.h
        review_dlg.h
        roto.h
        eplaceDialogS.cpp
        eplaceDialogS.h
        TRUCTURED.CPP
        YMBOL.CPP
        extS.cpp
        extS.h
        ndo.cpp
        ndo.h
        til.cpp
        til.h
        )
