add_subdirectory(RichEditPlus)
add_executable(Edit68K
        ASSEMBLE.CPP
        BINFILE.CPP
        BUILD.CPP
        CODEGEN.CPP
        CProject.h
        DIRECTIV.CPP
        EDIT68K.cpp
        ERROR.CPP
        EVAL.CPP
        GLOBALS.CPP
        HTMLhelp.h
        INSTLOOK.CPP
        INSTTABL.CPP
        LISTING.CPP
        MACRO.CPP
        MOVEM.CPP
        OBJECT.CPP
        OPPARSE.CPP
        Preview_dlg.h
        STRUCTURED.CPP
        SYMBOL.CPP
        aboutS.cpp
        aboutS.h
        asm.h
        assembleS.cpp
        assembleS.h
        chksaveS.cpp
        chksaveS.h
        editorOptions.cpp
        editorOptions.h
        ez68k.h
        findDialogS.cpp
        findDialogS.h
        fontForm1.cpp
        fontForm1.h
        help.cpp
        help.h
        listS.cpp
        listS.h
        mainS.cpp
        mainS.h
        newhelpS.h
        optionsS.cpp
        optionsS.h
        preview.h
        proto.h
        replaceDialogS.cpp
        replaceDialogS.h
        textS.cpp
        textS.h
        undo.cpp
        undo.h
        util.cpp
        util.h
        )

