add_executable(Sim68K
        aboutS.cpp
        aboutS.h
        BPoint.cpp
        BPoint.h
        BPointExpr.cpp
        BPointExpr.h
        BREAKPOINTSu.cpp
        BREAKPOINTSu.h
        CODE1.CPP
        CODE2.CPP
        CODE3.CPP
        CODE4.CPP
        CODE5.CPP
        CODE6.CPP
        CODE7.CPP
        CODE8.CPP
        CODE9.CPP
        def.h
        extern.h
        ez68k.h
        findDialogS.cpp
        findDialogS.h
        FullscreenOptions.cpp
        FullscreenOptions.h
        hardwareu.cpp
        hardwareu.h
        help.cpp
        help.h
        HTMLhelp.h
        LogfileDialogu.cpp
        LogfileDialogu.h
        logU.cpp
        logU.h
        Memory1.cpp
        Memory1.h
        Net.cpp
        Net.h
        OPCODES.H
        Optionsu.cpp
        Optionsu.h
        PROTO.H
        RUN.CPP
        SCAN.CPP
        SIM68K.cpp
        SIM68Ku.cpp
        SIM68Ku.h
        simIOu.cpp
        simIOu.h
        SIMOPS1.CPP
        SIMOPS2.CPP
        Stack1.cpp
        Stack1.h
        STARTSIM.CPP
        STRUTILS.CPP
        UTILS.CPP
        var.h)